--- a/quiz1.html
+++ b/quiz1.html
@@ -6,10 +6,10 @@
     <title>IS3103 Quizes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <!-- development version, includes helpful console warnings -->
@@ -69,7 +69,6 @@
 
     <div id="questions">
       <div v-if="dbRequest.isLoading" id="loader"></div>
-      <div id="myfirstchart" style="height: 250px;"></div>
       <question-section
         class="animate-bottom"
         v-for="question in questionList"
@@ -169,20 +168,13 @@
         </div>
       </section>
 
-      <section
-        class="section"
-        id="results" 
-        v-show="attempts > 0 && !errors.questions.hasError && !errors.name.hasError && !errors.email.hasError">
-        <div class="container has-text-centered">
-          <div class="columns">
-            <div class="column is-10-tablet is-offset-1-tablet is-three-fifths-desktop is-offset-one-fifth-desktop">
-              <h1 class="subtitle is-4"> Your Leadership Communication Style Is:</h1>
-              <h1 class="title is-1 is-capitalized"> {{ results.title }} </h1>
-              <br />
-              <canvas id="ScoresInPieChart"></canvas>
-            </div>
-          </div>
+      <section id="results">
+        <div class="container has-text-centered" v-show="attempts > 0 && !errors.questions.hasError && !errors.name.hasError && !errors.email.hasError">
+          <h1 class="subtitle is-4">Your Leadership Communication Style:</h1>
+          <h1 class="title is-1 is-capitalized">{{ results.title }}</h1>
+          <br />
         </div>
+        <div id="myfirstchart"></div>
       </section>
     </div>
 
