--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IS3103 Quizes [Admin]</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <!-- vue development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -55,16 +55,16 @@
           </div>
         </div>
       </div>
-    </section> 
+    </section>
 
     <section class="section" id="quiz1">
-      
+
       <div class="container">
         <div class="columns">
           <div class="column ">
             <h1 class="title">Responses for: <a href="quiz1.html" target="_blank">Leadership Communication Style Quiz</a> </h1>
             <h2 class="subtitle">
-              The following are responses from the students, sorted according to the latest submission. 
+              The following are responses from the students, sorted according to the latest submission.
             </h2>
           </div>
           <div class="column is-narrow has-text-right">
@@ -106,7 +106,7 @@
         </p>
       </div>
     </footer>
-    <script type="text/javascript" src="js/utility.js"></script>
+    <script type="text/javascript" src="../js/utility.js"></script>
     <script type="text/javascript" src="admin.js"></script>
   </body>
 </html>
