fix display result error

--- a/quiz-4jy/index.html
+++ b/quiz-4jy/index.html
@@ -190,7 +190,7 @@
       </section>
 
       <section id="results">
-        <div class="container has-text-centered" v-show="attempts > 0 && !errors.questions.hasError && !errors.email.hasError">
+        <div class="container has-text-centered" v-show="attempts > 0 && !errors.questions.hasError && !errors.email.hasError && !errors.gender.hasError">
           <h1 class="title is-1">Your Transformational Leadership Scale</h1>
           <h1 class="subtitle"> A score of 6 or greater reflects a strong orientation to engage in each of these behaviors. <br /> A score of 2 or less reflects that you are unlikely to engage in each of these behaviors.</h1>
             <table class="table" style="margin-right: auto; margin-left: auto">
