--- a/admin/index.html
+++ b/admin/index.html
@@ -144,7 +144,7 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
-          <strong>Leadership Quizes</strong> for <a href="http://www.nus.edu.sg/celc/programmes/is3103.html" target="_blank">IS3103</a> module | NUS School of Computing
+          <strong>Leadership Quizes</strong> for IS3103 module | NUS School of Computing
         </p>
       </div>
     </footer>
