--- a/quiz-avh/responses/index.html
+++ b/quiz-avh/responses/index.html
@@ -43,21 +43,21 @@
         <div class="hero-body">
           <div class="container has-text-centered">
             <h1 class="title is-1">
-              Transformational Leadership Scale
+              Motivation To Lead Scale
             </h1>
             <p class="subtitle">
-              View the responses for the quiz in realtime
+              View the responses of the quiz in realtime
             </p>
-            <a class="button is-light is-large is-outlined" href="#quiz2"> View Responses </a>
+            <a class="button is-light is-large is-outlined" href="#quiz4"> View Responses </a>
           </div>
         </div>
       </section>
 
-      <section class="section" id="quiz2">
+      <section class="section" id="quiz4">
         <div class="container">
           <div class="columns">
             <div class="column ">
-              <h1 class="title">Responses for: <a href="../index.html" target="_blank">Transformational Leadership Scale Quiz</a> </h1>
+              <h1 class="title">Responses for: <a href="../index.html" target="_blank">Motivation To Lead Scale</a> </h1>
               <h2 class="subtitle">
                 The following are responses from the students, sorted according to the latest submission.
               </h2>
@@ -81,13 +81,11 @@
               <tr>
                 <th>Gender</th>
                 <th>Email</th>
-                <th class="is-hidden-mobile">Articulate Vision</th>
-                <th class="is-hidden-mobile">Role Model</th>
-                <th class="is-hidden-mobile">Foster Goal Acceptance</th>
-                <th class="is-hidden-mobile">Performance Expectations</th>
-                <th class="is-hidden-mobile">Individual Support</th>
-                <th class="is-hidden-mobile">Intellectual Simulation</th>
-                <th class="is-hidden-mobile">Transactional Leader Behaviour</th>
+                <th>Total Score</th>
+                <th>Type</th>
+                <th class="is-hidden-mobile">Affective-Identify</th>
+                <th class="is-hidden-mobile">Noncalculative</th>
+                <th class="is-hidden-mobile">Social-Normative</th>
                 <th class="is-hidden-mobile">Timestamp</th>
                 <th class="is-hidden-mobile">Delete</th>
               </tr>
@@ -95,21 +93,20 @@
             <tbody>
               <tr v-for="response in responses">
                 <td class="is-capitalized">{{ response.student.gender }}</td>
-                <td>{{ response.student.email }}</td>
-                <td class="is-hidden-mobile">{{ response.results.scores.articulateVision }}</td>
-                <td class="is-hidden-mobile">{{ response.results.scores.roleModel }}</td>
-                <td class="is-hidden-mobile">{{ response.results.scores.fosterGoalAcceptance }}</td>
-                <td class="is-hidden-mobile">{{ response.results.scores.performanceExpectations }}</td>
-                <td class="is-hidden-mobile">{{ response.results.scores.individualSupport }}</td>
-                <td class="is-hidden-mobile">{{ response.results.scores.intellectualSimulation }}</td>
-                <td class="is-hidden-mobile">{{ response.results.scores.transactionalLeaderBehaviour }}</td>
+                <td>
+                  {{ response.student.email }} <br />
+                  <button class="button is-info is-outlined is-small" @click="promptEmail(response.student.email)">Email Results</button>
+                </td>
+                <td>{{ response.results.totalScore }}</td>
+                <td>{{ getProperTitle(response.results.title) }}</td>
+                <td class="is-hidden-mobile">{{ response.results.scores.affectiveIdentify }}</td>
+                <td class="is-hidden-mobile">{{ response.results.scores.noncalculative }}</td>
+                <td class="is-hidden-mobile">{{ response.results.scores.socialNormative }}</td>
                 <td class="is-hidden-mobile">{{ response.writtenAt }}</td>
                 <td class="is-hidden-mobile"><button class="button is-danger is-outlined" @click="promptDelete(response.student.email)">Delete</button></td>
-
               </tr>
             </tbody>
           </table>
-
 
           <!-- Summary tab -->
           <table v-if="tabIndex" class="table is-striped" style="margin-right: auto; margin-left: auto">
@@ -124,47 +121,28 @@
             <tbody>
               <tr>
                 <th>Articulate Vision</th>
-                <td>{{ summary.all.articulateVision }}</td>
-                <td>{{ summary.male.articulateVision }}</td>
-                <td>{{ summary.female.articulateVision }}</td>
+                <td>{{ summary.all.affectiveIdentify }}</td>
+                <td>{{ summary.male.affectiveIdentify }}</td>
+                <td>{{ summary.female.affectiveIdentify }}</td>
               </tr>
               <tr>
                 <th>Role Model</th>
-                <td>{{ summary.all.roleModel }}</td>
-                <td>{{ summary.male.roleModel }}</td>
-                <td>{{ summary.female.roleModel }}</td>
+                <td>{{ summary.all.noncalculative }}</td>
+                <td>{{ summary.male.noncalculative }}</td>
+                <td>{{ summary.female.noncalculative }}</td>
 
               </tr>
               <tr>
                 <th>Foster Goal Acceptance</th>
-                <td>{{ summary.all.fosterGoalAcceptance }}</td>
-                <td>{{ summary.male.fosterGoalAcceptance }}</td>
-                <td>{{ summary.female.fosterGoalAcceptance }}</td>
+                <td>{{ summary.all.socialNormative }}</td>
+                <td>{{ summary.male.socialNormative }}</td>
+                <td>{{ summary.female.socialNormative }}</td>
 
               </tr>
-              <tr>
-                <th>Performance Expectations</th>
-                <td>{{ summary.all.performanceExpectations }}</td>
-                <td>{{ summary.male.performanceExpectations }}</td>
-                <td>{{ summary.female.performanceExpectations }}</td>
-              </tr>
-              <tr>
-                <th>Individual Support</th>
-                <td>{{ summary.all.individualSupport }}</td>
-                <td>{{ summary.male.individualSupport }}</td>
-                <td>{{ summary.female.individualSupport }}</td>
-              </tr>
-              <tr>
-                <th>Intellectual Simulation</th>
-                <td>{{ summary.all.intellectualSimulation }}</td>
-                <td>{{ summary.male.intellectualSimulation }}</td>
-                <td>{{ summary.female.intellectualSimulation }}</td>
-              </tr>
-              <tr>
-                <th>Transactional Leader Behaviour</th>
-                <td>{{ summary.all.transactionalLeaderBehaviour }}</td>
-                <td>{{ summary.male.transactionalLeaderBehaviour }}</td>
-                <td>{{ summary.female.transactionalLeaderBehaviour }}</td>
+                <th>Total</th>
+                <td>{{ summary.all.affectiveIdentify + summary.all.noncalculative + summary.all.socialNormative }}</td>
+                <td>{{ summary.male.affectiveIdentify + summary.male.noncalculative + summary.male.socialNormative }}</td>
+                <td>{{ summary.female.affectiveIdentify + summary.female.noncalculative + summary.female.socialNormative }}</td>
               </tr>
             </tbody>
           </table>
