quiz 5 + send results page

--- a/quiz-awj/index.html
+++ b/quiz-awj/index.html
@@ -38,10 +38,10 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <h1 class="title is-1">
-            Motivation To Lead Scale
+            Creative Mindset and Self-Concept Scale
           </h1>
           <h2 class="subtitle">
-            Find out your motivation to lead scale by taking taking this questionnaire
+            Find out your creative mindset and self-concept scale by taking taking this questionnaire
           </h2>
           <br />
           <a class="button is-primary is-inverted is-outlined is-large" onclick="goToAnchor('#directions')">Start Quiz</a>
@@ -172,8 +172,8 @@
 
       <section id="results">
         <div class="container has-text-centered" v-show="attempts > 0 && !errors.questions.hasError && !errors.email.hasError && !errors.gender.hasError">
-          <h1 class="subtitle is-4">Your Motivation To Lead Score:</h1>
-          <h1 class="title is-1 is-capitalized">{{ results.totalScore }} ({{ properTitle }})</h1>
+          <h1 class="subtitle is-4">Your Creative Mindset and Self-Concept Type:</h1>
+          <h1 class="title is-1 is-capitalized">{{ properTitle }}</h1>
           <br />
         </div>
         <div class="columns">
@@ -193,6 +193,6 @@
       </div>
     </footer>
     <script type="text/javascript" src="../js/utility.js"></script>
-    <script type="text/javascript" src="quiz4.js"></script>
+    <script type="text/javascript" src="quiz5.js"></script>
   </body>
 </html>
