remove type under responses

--- a/quiz-awj/index.html
+++ b/quiz-awj/index.html
@@ -172,8 +172,7 @@
 
       <section id="results">
         <div class="container has-text-centered" v-show="attempts > 0 && !errors.questions.hasError && !errors.email.hasError && !errors.gender.hasError">
-          <h1 class="subtitle is-4">Your Creative Mindset and Self-Concept Type:</h1>
-          <h1 class="title is-1 is-capitalized">{{ properTitle }}</h1>
+          <h1 class="subtitle is-3">Your Creative Mindset and Self-Concept Scale</h1>
           <br />
         </div>
         <div class="columns">
