--- a/quiz-awj/index.html
+++ b/quiz-awj/index.html
@@ -38,10 +38,10 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <h1 class="title is-1">
-            Creative Mindset and Self-Concept Scale
+            Creative Perception Survey
           </h1>
           <h2 class="subtitle">
-            Find out your creative mindset and self-concept scale by taking taking this questionnaire
+            Find out your creative perception scale by taking taking this questionnaire
           </h2>
           <br />
           <a class="button is-primary is-inverted is-outlined is-large" onclick="goToAnchor('#directions')">Start Quiz</a>
@@ -172,7 +172,7 @@
 
       <section id="results">
         <div class="container has-text-centered" v-show="attempts > 0 && !errors.questions.hasError && !errors.email.hasError && !errors.gender.hasError">
-          <h1 class="subtitle is-3">Your Creative Mindset and Self-Concept Scale</h1>
+          <h1 class="subtitle is-3">Your Creative Perception Survey Scale</h1>
           <br />
         </div>
         <div class="columns">
