--- a/quiz-awj/responses/index.html
+++ b/quiz-awj/responses/index.html
@@ -43,7 +43,7 @@
         <div class="hero-body">
           <div class="container has-text-centered">
             <h1 class="title is-1">
-              Creative Mindset and Self-Concept
+              Creative Perception Survey
             </h1>
             <p class="subtitle">
               View the responses of the quiz in realtime
@@ -57,7 +57,7 @@
         <div class="container">
           <div class="columns">
             <div class="column ">
-              <h1 class="title">Responses for: <a href="../index.html" target="_blank">Creative Mindset and Self-Concept</a> </h1>
+              <h1 class="title">Responses for: <a href="../index.html" target="_blank">Creative Perception Survey</a> </h1>
               <h2 class="subtitle">
                 The following are responses from the students, sorted according to the latest submission.
               </h2>
